--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>My perfect website </title>
 <script type="text/javascript" src="http://www.visitorjs.com/visitor.js?key=YOUR_KEY"></script>
 <script src="./jquery-3.3.1.js" type="text/javascript"></script>
 <script src="https://www.amcharts.com/lib/4/core.js"></script>
